[package]
name = "hwloc"
version = "0.3.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
license = "MIT"
keywords = ["hwloc"]
description = "Rust bindings for the hwloc hardware locality library."
repository = "https://github.com/daschl/hwloc-rs"
homepage = "http://daschl.github.io/hwloc-rs/"
documentation = "http://daschl.github.io/hwloc-rs/rustdoc/"
build = "build.rs"
links = "hwloc"
readme = "README.md"

[dependencies]
libc = "0.2.7"
errno = "0.1.6"
num = "0.1.31"
bitflags = "0.5.0"

[build-dependencies]
pkg-config = "0.3.6"
