[package]
name = "hwloc"
version = "0.3.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
license = "MIT"
keywords = ["hwloc"]
description = "Rust bindings for the hwloc hardware locality library."
repository = "https://github.com/daschl/hwloc-rs"
homepage = "http://daschl.github.io/hwloc-rs/"
documentation = "http://daschl.github.io/hwloc-rs/rustdoc/"
build = "build.rs"
links = "hwloc"
readme = "README.md"

[dependencies]
libc = "0.2.7"
errno = "0.1.6"
bitflags = "0.5.0"

[dependencies.num]
version = "0.1.13"
default-features = false

[build-dependencies]
pkg-config = "0.3.6"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = "0.2"
